[package]
name = "html-to-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ego-tree = "0.6.2"
reqwest = "0.11.13"
scraper = "0.14.0"
tempdir = "0.3.7"
tokio = { version = "1", features = ["full"]}
url = "2.3.1"